spring-web-mvc 모듈 초기 셋팅

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'spring-boot-demo'
 
 include(
-        ':spring-security'
+        ':spring-security',
+        ':spring-web-mvc'
 )
