--- a/spring-security/build.gradle
+++ b/spring-security/build.gradle
@@ -7,9 +7,10 @@ configurations {
 
 dependencies {
 	// Spring
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	// DBMS
 	runtimeOnly 'com.h2database:h2'
