1. Form 인증 : 테스트코드 추가

--- a/spring-security/build.gradle
+++ b/spring-security/build.gradle
@@ -15,7 +15,17 @@ dependencies {
 	// DBMS
 	runtimeOnly 'com.h2database:h2'
 
+	// Test
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
+	testImplementation 'org.springframework.security:spring-security-test'
+
 	// External Library
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+}
+
+test {
+	useJUnitPlatform()
 }
