--- a/spring-web-mvc/build.gradle
+++ b/spring-web-mvc/build.gradle
@@ -3,6 +3,10 @@ dependencies {
 	// Spring
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// DBMS
+	runtimeOnly 'com.h2database:h2'
 
 	// External Library
 	compileOnly 'org.projectlombok:lombok'
