--- a/spring-security/src/main/resources/application.yml
+++ b/spring-security/src/main/resources/application.yml
@@ -1,4 +1,16 @@
+# 글로벌 셋팅
 spring:
+  application:
+    name: 'spring-security'
   h2:
     console:
       enabled: true
+  datasource:
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 0
+      connection-timeout: 10
+
+server:
+  port: 8080
+---
