--- a/spring-junit5-mockito-test/build.gradle
+++ b/spring-junit5-mockito-test/build.gradle
@@ -8,6 +8,10 @@ configurations {
 dependencies {
 	// Spring
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// DBMS
+	runtimeOnly 'com.h2database:h2'
 
 	// Test
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
