--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,6 @@ rootProject.name = 'spring-boot-demo'
 include(
         ':spring-security',
         ':spring-junit5-mockito-test',
-        ':spring-web-mvc'
+        ':spring-web-mvc',
+        'jpa-basic'
 )
