--- a/jpa-basic/build.gradle
+++ b/jpa-basic/build.gradle
@@ -1,4 +1,7 @@
 dependencies {
+    implementation 'org.hibernate:hibernate-entitymanager:5.4.32.Final'
+    implementation 'com.h2database:h2:1.4.200'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
