# mvc-beginning:servlet 모듈 최초 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,5 +4,6 @@ include(
         ':spring-security',
         ':spring-junit5-mockito-test',
         ':spring-web-mvc',
-        'jpa-basic'
+        ':jpa-basic',
+        ':mvc-beginning:servlet'
 )
