feat: [디자인패턴] Chain of Responsibility 패턴 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,5 +5,7 @@ include(
         ':spring-junit5-mockito-test',
         ':spring-web-mvc',
         ':jpa-basic',
-        ':mvc-beginning:servlet'
+        ':mvc-beginning:servlet',
+        ':spring-data-jpa',
+        ':design-pattern'
 )
