--- a/test-was/src/main/resources/application.yml
+++ b/test-was/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 
+
 spring:
   h2:
     console:
@@ -17,3 +18,14 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+#        dialect: org.hibernate.dialect.Oracle12cDialect
+        format_sql: true
+server:
+  port: 8099
+
+logging:
+  level:
+    com:
+      kenny:
+        testwas:
+          ui: DEBUG
