--- a/test-was/build.gradle
+++ b/test-was/build.gradle
@@ -22,6 +22,12 @@ dependencies {
     // TODO : jaskson library 2.12 미만 버전은, 멤버필드 final을 수용하지 못한다.
 //    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.4'
 
+    // QueryDsl
+    implementation "com.querydsl:querydsl-jpa:5.0.0"               // QueryDSL JPA 라이브러리
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jpa"      // Annotation Processing Tool 쿼리 타입(Q)을 생성할 때 필요한 라이브러리
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"           // java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"             // java.lang.NoClassDefFoundError (javax.annotation.Generated) 발생 대응
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
@@ -33,3 +39,4 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
