--- a/test-was/src/main/resources/application.yml
+++ b/test-was/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-
-
 spring:
   h2:
     console:
@@ -25,7 +23,4 @@ server:
 
 logging:
   level:
-    com:
-      kenny:
-        testwas:
-          ui: DEBUG
+    com.kenny.testwas: DEBUG
