--- a/test-was/src/main/resources/application.yml
+++ b/test-was/src/main/resources/application.yml
@@ -4,10 +4,14 @@ spring:
       enabled: true
       path: /h2-console
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
-    username: sa
-    password:
+#    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
+#    username: sa
+#    password:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/mysql
+    username: root
+    password: 1qaz@WSX
   jpa:
     show-sql: true
     generate-ddl: true
@@ -15,7 +19,7 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+#        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 #        dialect: org.hibernate.dialect.Oracle12cDialect
         format_sql: true
 server:
