feat: [test-was] queryDSL 테스트를 위한 card domain 및 repository 추가

--- a/test-was/src/main/resources/application.yml
+++ b/test-was/src/main/resources/application.yml
@@ -27,4 +27,6 @@ server:
 
 logging:
   level:
-    com.kenny.testwas: DEBUG
+    com.kenny.testwas: TRACE
+    org.hibernate.sql: TRACE
+    com.querydsl.sql: DEBUG
