chore: [test-was] application.yml의 불필요한 옵션 제거

--- a/test-was/src/main/resources/application.yml
+++ b/test-was/src/main/resources/application.yml
@@ -27,6 +27,4 @@ server:
 
 logging:
   level:
-    com.kenny.testwas: TRACE
-    org.hibernate.sql: TRACE
-    com.querydsl.sql: DEBUG
+    com.kenny.testwas: DEBUG
