feat: JPA & Postgres Sequence 셋팅 테스트를 위한 기능구현
- 대상 : spring-data-jpa 모듈
- docker-compose 추가 및 postrgres 서비스 추가
- 복합PK에 sequence 컬럼이 있을때, nextval()을 직접하지 않고, @SequenceGenerator와 @GeneratedValue로 save()시 셋팅되게 할 수 있는지 확인 : 할 수 있는걸로 테스트되었음P

--- a/spring-data-jpa/src/main/resources/application.yml
+++ b/spring-data-jpa/src/main/resources/application.yml
@@ -1,21 +1,42 @@
 spring:
+  # -------------------
+  # - h2 설정
+  # -------------------
   h2:
     console:
       enabled: true
       path: /h2-console
 
   datasource:
-    url: jdbc:h2:mem:test # test ??? ??? ??? ??? ???? ???. 
-    username: sa # username? password? ??? ??? ??
-    password:
-    driver-class-name: org.h2.Driver
-
+    # -------------------
+    # - h2 설정
+    # -------------------
+#    url: jdbc:h2:mem:test
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
+    # -------------------
+    # - postgres 설정
+    # -------------------
+    url: jdbc:postgresql://localhost:5432/testdb
+    username: test
+    password: test
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create # ??????? ??? ? ??????? ????? ?? ??? ??
+      ddl-auto: create-drop
     properties:
       hibernate:
-        format_sql: true # ???? query? ???
+        format_sql: true
+    show-sql: true
+
+#  sql:
+#    init:
+#      # schema.sql로 DDL을 실행하기 위한 옵션
+#      # ddl-auto와 동시에 설정되어 있을때는, ddl-auto가 적용된다
+#      mode: always
 
 logging.level:
-  org.hibernate.SQL: debug
+  com.kenny.springbootdemo.springdatajpa: DEBUG
+  org.hibernate.type: TRACE
+#  org.hibernate.SQL: DEBUG
